--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
     "@mui/lab": "^5.0.0-alpha.146",
-    "@mui/material": "^5.14.11",
+    "@mui/material": "^5.14.13",
     "@mui/styles": "^5.14.11",
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.14.1",
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-block-ui": "^1.3.6",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
