--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.200",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "history": "^5.3.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-block-ui": "^1.3.6",
     "react-bootstrap": "^2.9.0",
