--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "@mui/lab": "^5.0.0-alpha.146",
     "@mui/material": "^5.14.13",
     "@mui/styles": "^5.14.11",
+    "@mui/x-charts": "^6.18.1",
+    "@mui/x-date-pickers": "^6.18.1",
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -20,6 +22,7 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
