--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,12 +25,16 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "dayjs": "^1.11.10",
+    "file-saver": "^2.0.5",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-block-ui": "^1.3.6",
     "react-bootstrap": "^2.9.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
@@ -70,6 +74,8 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
+    "@types/papaparse": "^5.3.13",
     "@types/react-slick": "^0.23.12"
   }
 }
