--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,8 +7,12 @@ celery==5.3.4 # 处理定时任务
 redis==5.0.1 # 作为celery的broker
 django-redis==5.4.0
 django-celery-beat==2.5.0
+gevent==23.9.1
+sqlalchemy==2.0.23
 # UML建模工具,不需要在生产环境中使用
 # django-extensions==3.2.3
 # pygraphviz==1.11
 # dotenv
 python-dotenv==1.0.0
+# postgresql需要的包
+psycopg2-binary==2.9.3
