--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-DEBUG=False
+DEBUG=True
 
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=123456
 DJANGO_SUPERUSER_EMAIL=1756613825@qq.com
-ALLOWED_HOSTS=127.0.0.1,localhost,www.ghost-boilerplate.com,ghost-boilerplate.com
 
-DJANGO_DB=DB_POSTGRESQL
+# DJANGO_DB=DB_POSTGRESQL
+DJANGO_DB=postgresql
 
 SECRET_KEY=django-insecure-_6fm0c_&b3pg(h9@xwc+3h7dfv-m0o*ili$@xh=vgfy+ovusf*
