--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,10 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "dayjs": "^1.11.10",
+    "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "history": "^5.3.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
